Ensure errors are on top
In certain cases validation errors could be hidden by components that
were rendered "on top" (e.g. in the case of required rich text fields).

Providing a z-index signals that they belong on top.

Issue #2718

--- a/hypha/static_src/src/sass/apply/components/_form.scss
+++ b/hypha/static_src/src/sass/apply/components/_form.scss
@@ -415,6 +415,7 @@
         margin: 20px 0 0;
         color: $color--white;
         background: $color--error;
+        z-index: 1;
 
         @include media-query(tablet-landscape) {
             position: absolute;
